Add pics of rhinos

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-    <title> This is the first Mobile Computing task </title>
+    <title> About Rhinos </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	<script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +20,7 @@
 
 
 
-<body onload="selectFittingCSS();">
+<body>
 <div class="header">
 
 
@@ -96,11 +96,11 @@ function closeNav() {
 
 	
 		
-	<section id="about">
-		<h2> About Rhinos </h2>
+	<section id="quickPeek">
+		<h2> A quick peek at rhinos </h2>
 		<p class="responsive"> 
-		Welcome to this site about rhinos! 
-		Rhinos are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
+		Welcome to this site about rhinos! The actual name is rhinoceres, but rhino is more frequently used.
+		Rhino are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
 		<!-- <img src="Image/IndianRhinoCover.jpg" width="800" class="responsive"  alt="Indian rhino standing"> -->
 		
@@ -199,13 +199,19 @@ function closeNav() {
 
 	<section id="species" class="content">
 		<h2> White Rhino </h2>
+		
+		<figure>
+			<img class="img" src="Image/WhiteRhino.jpg" alt="A white rhino standing with its calf." title="White rhino with calf">
+			
+			<figcaption> A white rhino standing with its calf. </figcaption>
+		</figure>
+		
 		<p class="responsive"> 
-		The white rhinoceros is the largest of all of current rhino species. The origin of the name, white whino, is unknown. 
+		The white rhinoceros is the largest of all of current rhino species. 
 		A name better suited to it is its alternative name, the square-lipped rhino. The square lips are perfectly adapted for it to eat its diet of grass.
 		With it can forage grass efficiently and does not have pick grass pieces one by one. It has two horns, of which the one further away from the face is larger.
 		</p>
 
-		<h4> Subspecies </h4>
 		<p class="responsive"> 
 		There are two sub species of the white rhino : the southern and the northern. There are approximately 20000 southern white rhinos in the wild. Its conservation status is Not Threatened. 
 		They can be found in southern Africa, in nations like South Africa, Namibia, etc. It has also been introduced to east Africa, in Kenya and Tanzania.
@@ -223,19 +229,65 @@ function closeNav() {
 		This is due to them not being able to lift their high enough, as they forage only on the ground. </li>
 		  
 		</ul>
-
 		
-
 		
 		<h2> Black Rhino </h2>
 		
+		<figure>
+			<img class="img" src="Image/BlackRhino.jpg" alt="A black rhino standing in the bush." title="Black rhino standing in the bus">
+			
+			<figcaption> A black rhino standing in the bush. </figcaption>
+		</figure>
+		
+		<p class="responsive"> 
+		The population was 65000 in the 1970. Between 1970 and 1992 the population collapsed by 96% to 2300. It has made a comeback to 5000 individuals but there is long way to go.
+		There are eight subspecies (or five according to an alternative classification), but three of them are extinct and one is almost extinct, all in the last hundred years. 
+		The other four subspecies are also under great risk, and have to be protected, or even more subspecies will become extinct. 
+		If nothing is done, the days of the whole species may be numbered in just a few decades.
+		</p>
+		
+		<h4 class="triv"> Did you know? </h4>
+		<ul>
+		  <li class="trivia" style="list-style-type:circle">The black rhino has a hook shaped lip, which allows it to eat leaves effectively. 
+		  This is where its alternative name, hook lipped rhino comes from.</li>  
+		</ul>
+		
+		
 		<h2> Indian Rhino </h2>
+		
+		<figure>
+			<img class="img" src="Image/IndianRhino.jpg" alt="A Indian rhino standing a marshy area." title="Indian rhino standing in marsh">
+			
+			<figcaption> A Indian rhino standing a marshy area. </figcaption>
+		</figure>
+		
+		<p class="responsive"> 
+		The Indian rhino is the largest and most populous of the Asian rhinos. The population was less than 200 in the early 1900s, but has since made a comback to 3500 individuals.
+		Most of the population lives in the Indian state of Assam. They are also frequently seen in zoos, and very comfortable in water.
+		Its body looks quite different compared to African rhinos. The pattern on the body is split into three parts, which almost look like armor.
+		</p>
+		
+		<h4 class="triv"> Did you know? </h4>
+		<ul>
+		  <li class="trivia" style="list-style-type:circle">The Indian rhino is the state animal of Assam, India. </li>  
+		</ul>
+		
+		
 		<h2> Sumatran Rhino </h2>
 		
+		<figure>
+			<img class="img" src="Image/SumatranRhino.jpg" alt="A Sumatran rhino standing near a forest." title="Sumatran rhino standing near forest">
+			
+			<figcaption> A Sumatran rhino standing near  forest. </figcaption>
+		</figure>
+		
+		<p class="responsive"> 
 		The Sumatran rhino is most threatened of all rhinos. There are about 100 left, but they are fragmented the population is decreasing.
 		The Sumatran looks the most distinct of all rhinos with its layer of thin air on its body. There are three subspecies : Eastern, Western and Chittagong. 
 		The Chittagong subspecies is extinct and used to be found in India and Bangaladesh. The Eastern Sumatran rhino has about 15 individuals in Borneo.
 		The Western subspecies lives in Sumatra, but is extinct in West Malaysia. The individuals live in 4 fragmented populations. There about 10 living in captivity.
+		</p>
+		
 		
 		<h4 class="triv"> Did you know? </h4>
 		
@@ -248,10 +300,21 @@ function closeNav() {
 		
 		<h2> Javan Rhino </h2>
 		
+		<figure>
+			<img class="img" src="Image/JavanRhino.jpg" alt="A Javan rhino standing in a river." title="Javan rhino standing in river">
+			
+			<figcaption> A Javan rhino standing in a river. </figcaption>
+		</figure>
+		
+		<p class="responsive"> 
+
 		The Javan rhino is the rarest of all rhino species. With only about 60 rhinos left and none in captivity, the Javan rhino is critically endangered.
 		There used to be three subspecies: Indonesian, Vietnamese and Indian. The Indian and Vietnamese subspecies are both extinct.
-
+		</p>
+		<p class="responsive"> 
 		They only have one horn and look quite similar to Indian rhinos, but smaller in size.
+		</p>
+
 		
 		<h4 class="triv"> Did you know? </h4>
 		
@@ -261,18 +324,18 @@ function closeNav() {
 		  <li class="trivia" style="list-style-type:circle">	The Vietnamese population was presumed to have become extinct due to the Vietname War, 
 		  but they somehow survived and were discovered again in 1988. Unfortunately the last rhino in Vietnam died in 2010.</li>
 		</ul>
-		<p class="responsive"> 
 		
-		</p>
-		
-		<p class="responsive"> 
-
-		</p>
 		
 		
 	</section>
 	<section id="location" class="content">
-		<button onclick="getLocation();" class="fi")">Get initial location</button>
+	
+		<p class="responsive">
+		This part of the site is there for you to see where the rhinos live and see how far you live away from them.
+		Of course this is only the distance, and rhino sanctuaries are normally rather remote. Nevertheless, hopefully this give people an idea about how far they live.
+		</p>
+		
+		<button onclick="getLocation();"> <!--class="fi)"-->Get initial location</button>
 
 		<p id="geoloc" >Latitude: <br> Longitude:</p>
 
@@ -313,16 +376,17 @@ function closeNav() {
 		<a href="javascript:void(0)" onclick="selectLocation(4);">Javan Rhino</a>
 		</p>
 		
-		<div id="mapholder"> </div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU"></script>
-		<!-- <iframe -->
-			<!-- id="yourLocation" -->
-			<!-- width="100%" -->
-			<!-- height="450" -->
-			<!-- frameborder="0" style="border:0" -->
-			<!-- class="mapInit" -->
-		<!-- > -->
-		<!-- </iframe> -->
+		<!-- <div id="mapholder"> </div> -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSmjNMwcglEAOmYjXGrekM4yo0j78AUHg" ></script> -->
+		<iframe
+			id="yourLocation"
+			width="100%"
+			height="450"
+			frameborder="0" style="border:0"
+			class="map"
+			src=""
+		>
+		</iframe>
 		
 		<iframe
 			id="whiteLocation"
@@ -331,7 +395,7 @@ function closeNav() {
 			frameborder="0" style="border:0"
 			class="mapInit"
 			src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
-				&q=Kruger+National+Park,South+Africa&zoom=4" allowfullscreen>
+			&q=Kruger+National+Park,South+Africa&zoom=4" allowfullscreen>
 		</iframe>
 		
 		<iframe
@@ -399,8 +463,18 @@ function closeNav() {
 	</section>
 
 
-	<section id="images" class="content">
+	<section id="about" class="content">
 		<div style="max-width: 1000px" >
+			<p class="responsive">
+			This website was created for the first exam task of the KIT module: Mobile Computing and Internet of Things.
+			The creator of this website, Sachin Rajgopal, is a huge fan of rhinos and would like people to know about rhinos and the crisis they are facing.
+			</p>
+			<p class="responsive">
+			Sources: <br>
+			https://www.savetherhino.org/ <br>
+			https://rhinos.org/ <br>
+			</p>
+			
 		</div>
 	</section>
 
@@ -417,37 +491,37 @@ function closeNav() {
 	
 	
 
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 	
-	<script type="text/javascript">
-		// Load google charts
-		google.charts.load('current', {'packages':['corechart']});
-		google.charts.setOnLoadCallback(drawChart);
+	<!-- <script type="text/javascript"> -->
+		<!-- // Load google charts -->
+		<!-- google.charts.load('current', {'packages':['corechart']}); -->
+		<!-- google.charts.setOnLoadCallback(drawChart); -->
 		
-		// Draw the chart and set the chart values
-		function drawChart() {
-		  var data = google.visualization.arrayToDataTable([
-		  ['Rhino', 'Individuals'],
-		  ['White', 20000],
-		  ['Black', 5000],
-		  ['Indian', 3500],
-		  ['Sumatran', 100],
-		  ['Javan', 60]
-		]);
+		<!-- // Draw the chart and set the chart values -->
+		<!-- function drawChart() { -->
+		  <!-- var data = google.visualization.arrayToDataTable([ -->
+		  <!-- ['Rhino', 'Individuals'], -->
+		  <!-- ['White', 20000], -->
+		  <!-- ['Black', 5000], -->
+		  <!-- ['Indian', 3500], -->
+		  <!-- ['Sumatran', 100], -->
+		  <!-- ['Javan', 60] -->
+		<!-- ]); -->
 
-		  // Optional; add a title and set the width and height of the chart
-		  var options = {title:'Number of rhinos', 
-		  titleTextStyle:{fontSize:18} ,
-		  <!-- width:550, height:400, -!-> -->
-		  backgroundColor:'#F5F5DC'};
+		  <!-- // Optional; add a title and set the width and height of the chart -->
+		  <!-- var options = {title:'Number of rhinos',  -->
+		  <!-- titleTextStyle:{fontSize:18} , -->
+		  <!-- width:550, height:400, -!-> --> 
+		  <!-- backgroundColor:'#F5F5DC'}; -->
 
-		  // Display the chart inside the <div> element with id="piechart"
-		  var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-		  chart.draw(data, options);
-		}
+		  <!-- // Display the chart inside the <div> element with id="piechart" -->
+		  <!-- var chart = new google.visualization.PieChart(document.getElementById('chart_div')); -->
+		  <!-- chart.draw(data, options); -->
+		<!-- } -->
 
 
-	</script>
+	<!-- </script> -->
 
 
 	<script src="https://code.highcharts.com/highcharts.js"></script>
