Remove viewport settings

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
     <title> About Rhinos </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	<script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
