Added cover image

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -98,11 +98,12 @@ function closeNav() {
 		
 	<section id="quickPeek">
 		<h2> A quick peek at rhinos </h2>
+		
 		<p class="responsive"> 
 		Welcome to this site about rhinos! The actual name is rhinoceres, but rhino is more frequently used.
 		Rhino are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
-		<!-- <img src="Image/IndianRhinoCover.jpg" width="800" class="responsive"  alt="Indian rhino standing"> -->
+		<img src="Image/IndianRhinoCover.jpg" width="600" class="responsive"  alt="Indian rhino standing">
 		
 		<p class ="responsive">
 		There are five rhino species: White, Black, Indian, Sumatran and Javan. Most of the species have subspecies which tend to be diffrentiate. 
@@ -113,7 +114,7 @@ function closeNav() {
 
 		<div class="outer">
 		  <div class="inner">
-			<table align="left" class="t1">
+			<table align="left">
 				<tr>
 				  <th class="fix">Rhino species</th>
 				  <th>White</th>
@@ -131,12 +132,12 @@ function closeNav() {
 				  <td>60</td>
 				</tr>
 				<tr>
-				  <th class="fix" height="80">Habitat</th>
+				  <th class="fix" >Habitat</th>
 				  <td>Southern Africa</td>
-				  <td>Eastern and Southern Africa</td>
-				  <td>Northeast India and Nepal</td>
-				  <td>Sumatra and Borneo, Indonesia</td>
-				  <td>Java, Indonesia</td>
+				  <td>Southern Africa</td>
+				  <td>India and Nepal</td>
+				  <td>Indonesia</td>
+				  <td>Indonesia</td>
 				</tr>
 				<tr>
 				  <th class="fix">Conservation Status</th>
@@ -239,6 +240,12 @@ function closeNav() {
 			<figcaption> A black rhino standing in the bush. </figcaption>
 		</figure>
 		
+		
+		<p class="responsive"> 
+		Black rhinos can be found in eastern and southern Africa, in places like South Africa, Namibia, Kenya and Tanzania. 
+		There used to be a population in Cameroon, but it has become extinct in the last few decades.
+		</p>
+		
 		<p class="responsive"> 
 		The population was 65000 in the 1970. Between 1970 and 1992 the population collapsed by 96% to 2300. It has made a comeback to 5000 individuals but there is long way to go.
 		There are eight subspecies (or five according to an alternative classification), but three of them are extinct and one is almost extinct, all in the last hundred years. 
@@ -263,7 +270,7 @@ function closeNav() {
 		
 		<p class="responsive"> 
 		The Indian rhino is the largest and most populous of the Asian rhinos. The population was less than 200 in the early 1900s, but has since made a comback to 3500 individuals.
-		Most of the population lives in the Indian state of Assam. They are also frequently seen in zoos, and very comfortable in water.
+		Most of the population lives in the northeastern Indian state of Assam. They can also be found in Nepal. They are also frequently seen in zoos, and very comfortable in water.
 		Its body looks quite different compared to African rhinos. The pattern on the body is split into three parts, which almost look like armor.
 		</p>
 		
@@ -285,7 +292,7 @@ function closeNav() {
 		The Sumatran rhino is most threatened of all rhinos. There are about 100 left, but they are fragmented the population is decreasing.
 		The Sumatran looks the most distinct of all rhinos with its layer of thin air on its body. There are three subspecies : Eastern, Western and Chittagong. 
 		The Chittagong subspecies is extinct and used to be found in India and Bangaladesh. The Eastern Sumatran rhino has about 15 individuals in Borneo.
-		The Western subspecies lives in Sumatra, but is extinct in West Malaysia. The individuals live in 4 fragmented populations. There about 10 living in captivity.
+		The Western subspecies lives in Sumatra, but is extinct in West Malaysia. The individuals live in 4 fragmented populations. There are about 10 living in captivity.
 		</p>
 		
 		
@@ -309,7 +316,8 @@ function closeNav() {
 		<p class="responsive"> 
 
 		The Javan rhino is the rarest of all rhino species. With only about 60 rhinos left and none in captivity, the Javan rhino is critically endangered.
-		There used to be three subspecies: Indonesian, Vietnamese and Indian. The Indian and Vietnamese subspecies are both extinct.
+		There used to be three subspecies: Indonesian, Vietnamese and Indian. The Indian and Vietnamese subspecies are both extinct. 
+		All 60 individuals can be found in Ujong Kulon National Park on Java, Indonesia.
 		</p>
 		<p class="responsive"> 
 		They only have one horn and look quite similar to Indian rhinos, but smaller in size.
