--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -97,13 +97,13 @@ function closeNav() {
 	
 		
 	<section id="quickPeek">
-		<h2> A quick peek at rhinos </h2>
+		<h2> A quick peek at rhinos haha</h2>
 		
 		<p class="responsive"> 
 		Welcome to this site about rhinos! The actual name is rhinoceres, but rhino is more frequently used.
 		Rhino are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
-		<img src="Image/IndianRhinoCover.jpg" width="600" class="cover"  alt="Indian rhino standing">
+		<img src="Image/IndianRhinoCover.jpg" class="cover"  alt="Indian rhino standing">
 		
 		<p class ="responsive">
 		There are five rhino species: White, Black, Indian, Sumatran and Javan. Most of the species have subspecies which tend to be diffrentiate. 
