Resize cover image

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -97,7 +97,7 @@ function closeNav() {
 	
 		
 	<section id="quickPeek">
-		<h2> A quick peek at rhinos haha</h2>
+		<h2> A quick peek at rhinos</h2>
 		
 		<p class="responsive"> 
 		Welcome to this site about rhinos! The actual name is rhinoceres, but rhino is more frequently used.
