Add figure for cover image

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -103,7 +103,10 @@ function closeNav() {
 		Welcome to this site about rhinos! The actual name is rhinoceres, but rhino is more frequently used.
 		Rhino are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
-		<img src="Image/IndianRhinoCover.jpg" class="cover"  alt="Indian rhino standing">
+		<figure>
+			<img src="Image/IndianRhinoCover.jpg" class="cover"  alt="Indian rhino looking straight ahead">
+		</figure>
+		
 		
 		<p class ="responsive">
 		There are five rhino species: White, Black, Indian, Sumatran and Javan. Most of the species have subspecies which tend to be diffrentiate. 
