--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -104,7 +104,7 @@ function closeNav() {
 		Rhino are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
 		<figure>
-			<img src="Image/IndianRhinoCover.jpg" class="cover"  alt="Indian rhino looking straight ahead">
+			<img src="Image/IndianRhinoCover.jpg" width="600" class="cover"  alt="Indian rhino looking straight ahead">
 		</figure>
 		
 		
