--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -565,6 +565,8 @@ function closeNav() {
                 style: {
                     color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
                 }
+				,
+					distance:10
             }
         }
     },
