--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -184,7 +184,8 @@ function closeNav() {
 			
 		</p>
 		<figure>
-			<div id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>		
+			<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<div id="chart_div" style="min-height: 500px"></div>			
 			<figcaption> The distribution of the rhino population </figcaption>		
 		</figure>
 		
@@ -454,7 +455,7 @@ function closeNav() {
 		<h2> Rhino poaching </h2>
 		
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> 
-		<!-- <div id="chart_div" style="min-height: 500px"></div> -->
+		
 		
 		<p class="responsive"> 
 			Rhino poaching is an issue which is threatening the continued existence of rhinos in the wild. 
@@ -502,37 +503,37 @@ function closeNav() {
 	
 	
 
-	<!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
-	<!-- <script type="text/javascript"> -->
-		<!-- // Load google charts -->
-		<!-- google.charts.load('current', {'packages':['corechart']}); -->
-		<!-- google.charts.setOnLoadCallback(drawChart); -->
+	<script type="text/javascript">
+		// Load google charts
+		google.charts.load('current', {'packages':['corechart']});
+		google.charts.setOnLoadCallback(drawChart);
 		
-		<!-- // Draw the chart and set the chart values -->
-		<!-- function drawChart() { -->
-		  <!-- var data = google.visualization.arrayToDataTable([ -->
-		  <!-- ['Rhino', 'Individuals'], -->
-		  <!-- ['White', 20000], -->
-		  <!-- ['Black', 5000], -->
-		  <!-- ['Indian', 3500], -->
-		  <!-- ['Sumatran', 100], -->
-		  <!-- ['Javan', 60] -->
-		<!-- ]); -->
+		// Draw the chart and set the chart values
+		function drawChart() {
+		  var data = google.visualization.arrayToDataTable([
+		  ['Rhino', 'Individuals'],
+		  ['White', 20000],
+		  ['Black', 5000],
+		  ['Indian', 3500],
+		  ['Sumatran', 100],
+		  ['Javan', 60]
+		]);
 
-		  <!-- // Optional; add a title and set the width and height of the chart -->
-		  <!-- var options = {title:'Number of rhinos',  -->
-		  <!-- titleTextStyle:{fontSize:18} , -->
-		  <!-- width:550, height:400, -!-> --> 
-		  <!-- backgroundColor:'#F5F5DC'}; -->
+		  // Optional; add a title and set the width and height of the chart
+		  var options = {title:'Number of rhinos', 
+		  titleTextStyle:{fontSize:18} ,
+		  
+		  backgroundColor:'#F5F5DC'};
 
-		  <!-- // Display the chart inside the <div> element with id="piechart" -->
-		  <!-- var chart = new google.visualization.PieChart(document.getElementById('chart_div')); -->
-		  <!-- chart.draw(data, options); -->
-		<!-- } -->
+		  // Display the chart inside the <div> element with id="piechart"
+		  var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+		  chart.draw(data, options);
+		}
 
 
-	<!-- </script> -->
+	 </script> 
 
 
 	<script src="https://code.highcharts.com/highcharts.js"></script>
@@ -585,14 +586,14 @@ function closeNav() {
             y: 3500
         }, {
             name: 'Sumatran',
-            y: 100,
-			sliced: true,
-            selected: true
+            y: 100
+			<!-- sliced: true, -->
+            <!-- selected: true -->
         }, {
             name: 'Javan',
-            y: 60,
-			sliced: true,
-            selected: true
+            y: 60
+			<!-- sliced: true, -->
+            <!-- selected: true -->
         }]
     }]
 });
