--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -185,8 +185,8 @@ function closeNav() {
 		</p>
 		<figure>
 			<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-			<div id="chart_div" style="min-height: 500px"></div>			
-			<figcaption> The distribution of the rhino population </figcaption>		
+			<!-- <div id="chart_div" style="min-height: 500px"></div>			 -->
+			<figcaption style="text-align:center"> The distribution of the rhino population </figcaption>		
 		</figure>
 		
 		<p>
@@ -503,37 +503,37 @@ function closeNav() {
 	
 	
 
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 	
-	<script type="text/javascript">
-		// Load google charts
-		google.charts.load('current', {'packages':['corechart']});
-		google.charts.setOnLoadCallback(drawChart);
+	<!-- <script type="text/javascript"> -->
+		<!-- // Load google charts -->
+		<!-- google.charts.load('current', {'packages':['corechart']}); -->
+		<!-- google.charts.setOnLoadCallback(drawChart); -->
 		
-		// Draw the chart and set the chart values
-		function drawChart() {
-		  var data = google.visualization.arrayToDataTable([
-		  ['Rhino', 'Individuals'],
-		  ['White', 20000],
-		  ['Black', 5000],
-		  ['Indian', 3500],
-		  ['Sumatran', 100],
-		  ['Javan', 60]
-		]);
+		<!-- // Draw the chart and set the chart values -->
+		<!-- function drawChart() { -->
+		  <!-- var data = google.visualization.arrayToDataTable([ -->
+		  <!-- ['Rhino', 'Individuals'], -->
+		  <!-- ['White', 20000], -->
+		  <!-- ['Black', 5000], -->
+		  <!-- ['Indian', 3500], -->
+		  <!-- ['Sumatran', 100], -->
+		  <!-- ['Javan', 60] -->
+		<!-- ]); -->
 
-		  // Optional; add a title and set the width and height of the chart
-		  var options = {title:'Number of rhinos', 
-		  titleTextStyle:{fontSize:18} ,
+		  <!-- // Optional; add a title and set the width and height of the chart -->
+		  <!-- var options = {title:'Number of rhinos',  -->
+		  <!-- titleTextStyle:{fontSize:18} , -->
 		  
-		  backgroundColor:'#F5F5DC'};
+		  <!-- backgroundColor:'#F5F5DC'}; -->
 
-		  // Display the chart inside the <div> element with id="piechart"
-		  var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-		  chart.draw(data, options);
-		}
+		  <!-- // Display the chart inside the <div> element with id="piechart" -->
+		  <!-- var chart = new google.visualization.PieChart(document.getElementById('chart_div')); -->
+		  <!-- chart.draw(data, options); -->
+		<!-- } -->
 
 
-	 </script> 
+	 <!-- </script>  -->
 
 
 	<script src="https://code.highcharts.com/highcharts.js"></script>
@@ -656,6 +656,7 @@ function closeNav() {
     series: [
 	{
 		name: "Rhinos poached",
+		color:'#DC143C',
 		data: [13,83,122,333,448,668,1004,1215,1175,1054]
 	},
 	{
