--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -41,7 +41,7 @@
 		<div id="desktopMenu">
 			<a href="javascript:void(0)" id="a" onclick="selectSection(0);" class="menu">Quick peek</a> 
 			<a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="menu">Rhino species</a> 
-			<a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="menu">Location of rhinos</a>
+			<a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="menu">Rhino location</a>
 			<a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="menu">Poaching</a>
 			<a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="menu">About</a>
 		</div>
@@ -342,16 +342,23 @@ function closeNav() {
 	</section>
 	<section id="location" class="content">
 	
+		<h2> Locations of the rhino species </h2>
+	
 		<p class="responsive">
 		This part of the site is there for you to see where the rhinos live and see how far you live away from them.
 		Of course this is only the distance, and rhino sanctuaries are normally rather remote. Nevertheless, hopefully this give people an idea about how far they live.
 		</p>
 		
-		<button onclick="getLocation();"> <!--class="fi)"-->Get initial location</button>
+		<p class="responsive">
+		
+		Just press the first button below to get your current location. Then press the second button to get the distances (with the Haversine formula) to the rhino sanctuaries from your current location.
+		</p>
+		
+		<button onclick="getLocation();"> <!--class="fi)"-->Get current location</button>
 
 		<p id="geoloc" >Latitude: <br> Longitude:</p>
 
-		<button id="calc" onclick="calcDistance()">Get distance to initial location</button>
+		<button id="calc" onclick="calcDistance()">Get distances to current location</button>
 
 		<!--
 		<p id="dist">Distance not detected yet. </p>
@@ -369,11 +376,11 @@ function closeNav() {
 					</tr>
 					<tr>
 						<th class=fix>Distance as the crow flies in km</th>
-						<td><div id="wdist">Distance not detected yet. </div></td>
-						<td><div id="bdist">Distance not detected yet. </div></td>
-						<td><div id="idist">Distance not detected yet. </div></td>
-						<td><div id="sdist">Distance not detected yet. </div></td>
-						<td><div id="jdist">Distance not detected yet. </div></td>
+						<td><div id="wdist">- </div></td>
+						<td><div id="bdist">- </div></td>
+						<td><div id="idist">- </div></td>
+						<td><div id="sdist">- </div></td>
+						<td><div id="jdist">- </div></td>
 					</tr>
 				</table>
 			</div>
@@ -485,6 +492,7 @@ function closeNav() {
 			Sources: <br>
 			https://www.savetherhino.org/ <br>
 			https://rhinos.org/ <br>
+			http://www.rhinoresourcecenter.com/ <br>
 			</p>
 			
 		</div>
