Correct Quick Peek at Rhino

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -191,7 +191,7 @@ function closeNav() {
 		
 		<p>
 			The Sumatran rhino is only seen in captivity in one place outside Indonesia and Malaysia, and the Javan rhino is not seen in captivity currently, so it is understandable why they are unknown.
-			Many people might also not be able to see the differences between the rhino species. Hopefully the table and graphic below will help a bit.
+			Many people might also not be able to see the differences between the rhino species. Hopefully the table and the graphic on this page will help a bit.
 		</p>
 		
 		<figure>
