Distance calculated in one button instead of two

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -368,11 +368,11 @@ function closeNav() {
 		Just press the first button below to get your current location. Then press the second button to get the distances (with the Haversine formula) to the rhino sanctuaries from your current location.
 		</p>
 		
-		<button onclick="getLocation();"> <!--class="fi)"-->Get current location</button>
+		<button onclick="getLocation();"> <!--class="fi)"-->Get current location and calculate distances!</button>
 
 		<p id="geoloc" >Latitude: <br> Longitude:</p>
 
-		<button id="calc" onclick="calcDistance()">Get distances to current location</button>
+		<!-- <button id="calc" onclick="calcDistance()">Get distances to current location</button> -->
 
 		<!--
 		<p id="dist">Distance not detected yet. </p>
