--- a/ExamTask2/tempCompare/www/main.html
+++ b/ExamTask2/tempCompare/www/main.html
@@ -4,7 +4,7 @@
 		<title>TECO BLE Cloud</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta charset="utf-8"/>
-		
+		<script src="js/script.js"></script>
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<link rel="stylesheet" href="jqm/jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" href="vendor/waves/waves.min.css" />
@@ -18,7 +18,7 @@
 		</style>
 
 	</head>
-	<body>
+	<body onload="getCities();">
 
 	<!-- Center page for content. -->
 	<div data-role="page">
@@ -47,12 +47,32 @@
 				</li>
 			</ul>
 		</div>
+
+
+	<p id="result1">City 1: </p>
+    <!-- Here we will show the final result -->
+    <p id="result2">City 2:</p>
+	<p id="result3">option</p>
+	<button onclick="getTemp();" id="showTemp">Start</button>  
+	<button onclick="getCities(); getTemp()" id="randomCities">Randomize Cities</button>
+	<p></p>	
+	<div id="container1" ></div>
+	<p></p>
+	<div id="container2" ></div>
+	<p></p>
+	<div id="container3" ></div>	
+	
+	
 		
 		<!-- Button styled as Floating Action Button. -->
 		<button id="scanButton" data-wow-delay='0.9s' style="position: absolute !important; bottom: 20px; right: 20px;" onclick="startBLEScan();" class="wow fadeIn pull-right ui-btn ui-btn-inline ui-btn-fab ui-mini ui-btn-raised clr-warning ui-enabled"><i class="zmdi zmdi-bluetooth-search zmd-3x"></i></button>
 	
 	</div>
 
+
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/modules/exporting.js"></script>
+	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
 	<script src="jqm/jquery.mobile-1.4.5.min.js"></script>
