--- a/ExamTask1separate/poaching.html
+++ b/ExamTask1separate/poaching.html
@@ -39,7 +39,7 @@
 	
 	<nav>
 		<div id="desktopMenu">
-			<a href="quickpeek.html" id="a1" class="menu">Quick peek</a> 
+			<a href="index.html" id="a1" class="menu">Quick peek</a> 
 			<a href="species.html" id="b1" class="menu">Rhino species</a> 
 			<a href="location.html" id="c1"  class="menu">Rhino location</a>
 			<a href="poaching.html" id="d1"  class="menu">Poaching</a>
@@ -50,7 +50,7 @@
 		 <div id="mySidenav" class="sidenav">
 			  <a class="sideBarMenu" href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close sidebar<!--&times;--></a>
 			  
-				<a class="sideBarMenu" href="quickpeek.html" id="a2" onclick="closeNav();" >Quick peek</a> 
+				<a class="sideBarMenu" href="index.html" id="a2" onclick="closeNav();" >Quick peek</a> 
 				<a class="sideBarMenu" href="species.html" id="b2" onclick="closeNav();" >Rhino species</a> 
 				<a class="sideBarMenu" href="location.html" id="c2" onclick="closeNav();" >Rhino location</a>
 				<a class="sideBarMenu" href="poaching.html" id="d2" onclick="closeNav();" >Poaching</a>
