Add white background for menu

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -38,7 +38,7 @@
 	</header>
 	
 	<nav>
-		<div id="desktopMenu">
+		<div id="desktopMenu" style="background-color:#FFFFFF;" >
 			<a href="javascript:void(0)" id="a1" onclick="selectSection(0); changeColor(0)" class="menu">Quick peek</a> 
 			<a href="javascript:void(0)" id="b1" onclick="selectSection(1); changeColor(1)" class="menu">Rhino species</a> 
 			<a href="javascript:void(0)" id="c1" onclick="selectSection(2); changeColor(2)" class="menu">Rhino location</a>
