--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -38,7 +38,7 @@
 	</header>
 	
 	<nav>
-		<div id="desktopMenu" style="background-color:#FFFFFF;">
+		<div id="desktopMenu" >
 			<a href="index.html" id="a1" class="menu">Quick peek</a> 
 			<a href="species.html" id="b1" class="menu">Rhino species</a> 
 			<a href="location.html" id="c1"  class="menu">Rhino location</a>
