Add links to the next page

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -470,6 +470,13 @@ function closeNav() {
 			src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
 			&q=Ujong+Kulon+National+Park,Indonesia&zoom=4" allowfullscreen>
 		</iframe>
+		
+		<div style="text-align:right;">
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a>  -->
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a> -->
+			<a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a>
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(4);" style="color:blue;" >Next page: About</a> -->
+		</div>
 	</section>
 
 	<section id="poaching" class="content">
@@ -493,6 +500,13 @@ function closeNav() {
 		</p>
 		
 		<div id="container1" style="min-height: 500px"></div>
+		
+		<div style="text-align:right;">
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a>  -->
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a> -->
+			<!-- <a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a> -->
+			<a href="javascript:void(0)"  onclick="selectSection(4);" style="color:blue;" >Next page: About</a>
+		</div>
 	</section>
 
 
