--- a/ExamTask1separate/index.html
+++ b/ExamTask1separate/index.html
@@ -195,6 +195,15 @@ function closeNav() {
 			</figcaption>
 		</figure>
 		
+		<div style="text-align:right;">
+			<a href="species.html" style="color:blue;" >Next page: Rhino species</a> 
+			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
+			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
+			<!-- <a href="about.html" style="color:blue;" >Next page: About</a> -->
+		</div>
+		
+			
+		
 	</section>
 
 	
