--- a/ExamTask1separate/location.html
+++ b/ExamTask1separate/location.html
@@ -201,6 +201,14 @@ function closeNav() {
 			src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
 			&q=Ujong+Kulon+National+Park,Indonesia&zoom=4" allowfullscreen>
 		</iframe>
+		
+		<div style="text-align:right;">
+			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
+			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
+			<a href="poaching.html" style="color:blue;" >Next page: Poaching</a>
+			<!-- <a href="about.html" style="color:blue;" >Next page: About</a> -->
+		</div>
+		
 	</section>
 
 	
