--- a/ExamTask1separate/poaching.html
+++ b/ExamTask1separate/poaching.html
@@ -105,6 +105,14 @@ function closeNav() {
 		</p>
 		
 		<div id="container1" style="min-height: 500px"></div>
+		
+		<div style="text-align:right;">
+			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
+			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
+			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
+			<a href="about.html" style="color:blue;" >Next page: About</a>
+		</div>
+		
 	</section>
 
 
