--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -239,6 +239,13 @@ function closeNav() {
 		</ul>
 		
 		
+		<div style="text-align:right;">
+			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
+			<a href="location.html" style="color:blue;" >Next page: Rhino location</a>
+			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
+			<!-- <a href="about.html" style="color:blue;" >Next page: About</a> -->
+		</div>
+		
 		
 	</section>
 
