Change headings in the Rhino species file

--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -94,7 +94,8 @@ function closeNav() {
 	
 
 	<section id="species">
-		<h2> White Rhino </h2>
+		<h2 style="margin-bottom:-15px"> Rhino species </h2>
+		<h3> White Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/WhiteRhino.jpg" alt="A white rhino standing with its calf." title="White rhino with calf">
@@ -129,7 +130,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Black Rhino </h2>
+		<h3> Black Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/BlackRhino.jpg" alt="A black rhino standing in the bush." title="Black rhino standing in the bus">
@@ -159,7 +160,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Indian Rhino </h2>
+		<h3> Indian Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/IndianRhino.jpg" alt="A Indian rhino standing a marshy area." title="Indian rhino standing in marsh">
@@ -181,7 +182,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Sumatran Rhino </h2>
+		<h3> Sumatran Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/SumatranRhino.jpg" alt="A Sumatran rhino standing near a forest." title="Sumatran rhino standing near forest">
@@ -208,7 +209,7 @@ function closeNav() {
 		  
 		</ul>
 		
-		<h2> Javan Rhino </h2>
+		<h3> Javan Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/JavanRhino.jpg" alt="A Javan rhino standing in a river." title="Javan rhino standing in river">
