--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -202,7 +202,8 @@ function closeNav() {
 	</section>
 
 	<section id="species" class="content">
-		<h2> White Rhino </h2>
+		<h2 style="margin-bottom:-15px"> Rhino species </h2>
+		<h3> White Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/WhiteRhino.jpg" alt="A white rhino standing with its calf." title="White rhino with calf">
@@ -237,7 +238,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Black Rhino </h2>
+		<h3> Black Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/BlackRhino.jpg" alt="A black rhino standing in the bush." title="Black rhino standing in the bus">
@@ -267,7 +268,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Indian Rhino </h2>
+		<h3> Indian Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/IndianRhino.jpg" alt="A Indian rhino standing a marshy area." title="Indian rhino standing in marsh">
@@ -289,7 +290,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<h2> Sumatran Rhino </h2>
+		<h3> Sumatran Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/SumatranRhino.jpg" alt="A Sumatran rhino standing near a forest." title="Sumatran rhino standing near forest">
@@ -316,7 +317,7 @@ function closeNav() {
 		  
 		</ul>
 		
-		<h2> Javan Rhino </h2>
+		<h3> Javan Rhino </h3>
 		
 		<figure class="img">
 			<img class="img" src="Image/JavanRhino.jpg" alt="A Javan rhino standing in a river." title="Javan rhino standing in river">
