--- a/ExamTask1separate/index.html
+++ b/ExamTask1separate/index.html
@@ -195,7 +195,7 @@ function closeNav() {
 			</figcaption>
 		</figure>
 		
-		<div style="text-align:right;">
+		<div class="bLink;">
 			<a href="species.html" style="color:blue;" >Next page: Rhino species</a> 
 			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
 			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
