Move link to next page depending on mobile or desktop

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -193,7 +193,7 @@ function closeNav() {
 			</figcaption>
 		</figure>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a> 
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a> -->
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a> -->
@@ -347,7 +347,7 @@ function closeNav() {
 		  but they somehow survived and were discovered again in 1988. Unfortunately the last rhino in Vietnam died in 2010.</li>
 		</ul>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a>  -->
 			<a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a>
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a> -->
@@ -472,7 +472,7 @@ function closeNav() {
 			&q=Ujong+Kulon+National+Park,Indonesia&zoom=4" allowfullscreen>
 		</iframe>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a>  -->
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a> -->
 			<a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a>
@@ -502,7 +502,7 @@ function closeNav() {
 		
 		<div id="container1" style="min-height: 500px"></div>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(1);" style="color:blue;" >Next page: Rhino species</a>  -->
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(2);" style="color:blue;" >Next page: Rhino location</a> -->
 			<!-- <a href="javascript:void(0)"  onclick="selectSection(3);" style="color:blue;" >Next page: Poaching</a> -->
