--- a/ExamTask1separate/location.html
+++ b/ExamTask1separate/location.html
@@ -202,7 +202,7 @@ function closeNav() {
 			&q=Ujong+Kulon+National+Park,Indonesia&zoom=4" allowfullscreen>
 		</iframe>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
 			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
 			<a href="poaching.html" style="color:blue;" >Next page: Poaching</a>
