--- a/ExamTask1separate/poaching.html
+++ b/ExamTask1separate/poaching.html
@@ -106,7 +106,7 @@ function closeNav() {
 		
 		<div id="container1" style="min-height: 500px"></div>
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
 			<!-- <a href="location.html" style="color:blue;" >Next page: Rhino location</a> -->
 			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
