--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -240,7 +240,7 @@ function closeNav() {
 		</ul>
 		
 		
-		<div style="text-align:right;">
+		<div class="bLink">
 			<!-- <a href="species.html" style="color:blue;" >Next page: Rhino species</a>  -->
 			<a href="location.html" style="color:blue;" >Next page: Rhino location</a>
 			<!-- <a href="poaching.html" style="color:blue;" >Next page: Poaching</a> -->
