Fix type and break long links into multiples lines

--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -233,8 +233,8 @@ function closeNav() {
 		<h4 class="triv"> Did you know? </h4>
 		
 		<ul>
-		  <li class="trivia" style="list-style-type:circle">There was and is still to this day very little known about Javan rhinos. 
-		  The last Javan rhino is captivity was displayed as Indian rhino over a century ago.</li>
+		  <li class="trivia" style="list-style-type:circle">There is still to this day very little known about Javan rhinos. 
+		  The last Javan rhino in captivity was displayed as Indian rhino over a century ago.</li>
 		  <li class="trivia" style="list-style-type:circle">	The Vietnamese population was presumed to have become extinct due to the Vietname War, 
 		  but they somehow survived and were discovered again in 1988. Unfortunately the last rhino in Vietnam died in 2010.</li>
 		</ul>
