Fix Indian Rhino word wrap problem

--- a/ExamTask1separate/species.html
+++ b/ExamTask1separate/species.html
@@ -165,7 +165,7 @@ function closeNav() {
 		<figure class="img">
 			<img class="img" src="Image/IndianRhino.jpg" alt="A Indian rhino standing a marshy area." title="Indian rhino standing in marsh">
 			
-			<figcaption> A Indian rhino standing a marshy area. <br>
+			<figcaption style="word-wrap: break-word;"> A Indian rhino standing a marshy area. <br>
 			https://commons.wikimedia.org/wiki/File:One_horn_Rhino_in_Kaziranga_national_park.jpg
 			</figcaption>
 		</figure>
