Add word in poaching part

--- a/ExamTask1separate/poaching.html
+++ b/ExamTask1separate/poaching.html
@@ -101,7 +101,7 @@ function closeNav() {
 			Rhinos are slaughtered for medicine based on superstition. While in the 2000s poaching rates were low, the increased wealth of China and Vietnam have increased the interest in traditional chinese medicine.
 			Prices for rhino horn reportedly are higher than prices for gold and platinum. This allowed poachers to use sophisticated equipment like machine guns and helicopters, while rangers use normal rifles.
 			Unfortunately, rhinos are not the only species threatened by traditional chinese medicine. 
-			Elephants, tigers, pangolins, vaquitas and many other species are at risk.
+			Elephants, tigers, pangolins, vaquitas and many other species are also at risk.
 		</p>
 		
 		<div id="container1" style="min-height: 500px"></div>
